# WinFixer

./: CMakeLists.txt
include/: ui.h
include/modules/: apps.h  disk.h  excel.h  sysinfo.h
src/: main.c  ui.c
src/modules/: apps.c  disk.c  excel.c  sysinfo.c
